--- a/templates/webproa/informacion.html
+++ b/templates/webproa/informacion.html
@@ -11,13 +11,25 @@
 <body>
     <header>
         <img src="{% static 'webproa/foto/logo-proa.png' %}" class="logoproa" alt="ProA">
-        <a class="logoV">ProA CAPITAL NORTE</a>
+        <a class="titulo">ProA CAPITAL NORTE</a>
         <nav>
             <ul>
                 <li><a href="{% url 'home' %}">Inicio</a></li>
                 <li><a href="{% url 'votaciones' %}">Votaciones</a></li>
                 <li><a href="{% url 'novedades' %}">Novedades</a></li>
                 <li><a href="{% url 'contactos' %}">Contactos</a></li>
+
+                {% if user.is_authenticated %}
+                    <!-- Usuario logueado -->
+                    <li><a href="{% url 'perfil' %}">Mi Perfil</a></li>
+                {% else %}
+                    <!-- Usuario no logueado -->
+                    <li><a href="{% url 'login' %}">Iniciar Sesión</a></li>
+
+                    <li  class="sign_up">
+                        <a href="{% url 'registro' %}">Registrarse</a>
+                    </li>
+                {% endif %}
             </ul>
        </nav> 
    </header>
